--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <title>this is my website </title>
 <h1> this is my beautiful</h1>
-<p1) cbcbccxvdbchfbhkvjsdlhvjdfklgvdjklvgdjklvgsjvgdvjlgfvjvbdghjcvf</p1>
+<p1> cbcbccxvdbchfbhkvjsdlhvjdfklgvdjklvgdjklvgsjvgdvjlgfvjvbdghjcvf</p1>
+<p2>hfjkvgshukgdsjklvgdsuivcgfjvf</p1)
 </html>
